# little_project

./: README.md
51_MSG/: Project.M51  Project.hex  Project.lnp  Project.plg  Project.uvopt  Project.uvproj  main.LST  main.c
RC_Temperature/CC2530/Bsp/CC2530/App/: main.c
RC_Temperature/CC2530/Bsp/CC2530/IARProj/: RC_Temperature.dep  RC_Temperature.ewp  RC_Temperature.eww
RC_Temperature/CC2530/Components/basicrf/: basic_rf.h
RC_Temperature/CC2530/Components/common/: hal_defs.h
RC_Temperature/CC2530/Components/ds18b20/: ds18b20.c  ds18b20.h
RC_Temperature/CC2530/Components/targets/common/: hal_lcd_srf05.c
RC_Temperature/CC2530/Components/targets/interface/: hal_lcd.h
RC_Temperature/CC2530/Components/targets/srf05_soc/: hal_board.c
RC_Temperature/CC2530/Components/uart/: uart.c  uart.h
RC_Temperature/RaspPi/: index.html  service.py
Server_100/: .gitignore  CMakeLists.txt  basic_define.h  get_ip.c  get_ip.h  http.c  http.h  httpd_easyw  index.html  log.c  log.h  main.c  main.h  makefile  server_100.md  service.c  service.h  服务器模型及性能研究.doc
Server_100/libsdk/: CMakeLists.txt  log.ini  log_test.c
Server_100/libsdk/inc/: basic_define.h  file.h  get_ip.h  log.h  times.h
Server_100/libsdk/src/: file.c  get_ip.c  log.c  times.c
